GNOME Bugzilla – Bug 786603
Crashes when alt-tabbing away from window
Last modified: 2017-08-23 12:34:30 UTC
I switched through all the panels. This happened when I tried to Alt-Tab away from the shell. My guess is that one of the panels didn't destroy its search bar properly.
+ Trace 237817
Reproducer: Open the Keyboard panel, go to another panel, and type stuff...
Created attachment 358166 [details] [review] keyboard: Fix warning when typing something (gnome-control-center:5955): Gtk-WARNING **: The search bar does not have an entry connected to it. Call gtk_search_bar_connect_entry() to connect one. This also fixes this crash after the keyboard panel has been closed: #0 0x00007f5d861aaacf in gtk_search_bar_handle_event (bar=bar@entry=0x2225f30, event=0x2be55a0) at gtksearchbar.c:218 #1 0x00007f5d862e2eeb in _gtk_marshal_BOOLEAN__BOXED (closure=0x2ae28e0, return_value=0x7ffc06868840, n_param_values=<optimized out>, param_values=0x7ffc06868930, invocation_hint=<optimized out>, marshal_data=<optimized out>) at gtkmarshalers.c:82 #2 0x00007f5d84983ac6 in g_closure_invoke (closure=0x2ae28e0, return_value=0x7ffc06868840, n_param_values=2, param_values=0x7ffc06868930, invocation_hint=0x7ffc06868870) at ../jhbuild/glib/gobject/gclosure.c:804 #3 0x00007f5d849a17cf in signal_emit_unlocked_R (node=0x1909a10, detail=0, instance=0x1f18310, emission_return=0x7ffc06868a10, instance_and_params=0x7ffc06868930) at ../jhbuild/glib/gobject/gsignal.c:3635 #4 0x00007f5d849a0b5b in g_signal_emit_valist (instance=0x1f18310, signal_id=90, detail=0, var_args=0x7ffc06868bf8) at ../jhbuild/glib/gobject/gsignal.c:3401 #5 0x00007f5d849a1048 in g_signal_emit (instance=0x1f18310, signal_id=90, detail=0) at ../jhbuild/glib/gobject/gsignal.c:3447 #6 0x00007f5d8642d6e4 in gtk_widget_event_internal (widget=0x1f18310, event=0x2be55a0) at gtkwidget.c:7723 #7 0x00007f5d862dff8f in propagate_event (widget=0x1f18310, event=0x2be55a0, captured=<optimized out>, topmost=0x0) at gtkmain.c:2671 #8 0x00007f5d862e1fe0 in gtk_main_do_event (event=<optimized out>) at gtkmain.c:1911 #9 0x00007f5d85dca6c2 in _gdk_event_emit (event=0x2be55a0) at ../jhbuild/gtk+-3/gdk/gdkevents.c:73 #10 0x00007f5d85e49ae9 in gdk_event_source_dispatch (base=0x18ad410, callback=0x0, data=0x0) at ../jhbuild/gtk+-3/gdk/wayland/gdkeventsource.c:121 #11 0x00007f5d8469a882 in g_main_dispatch (context=0x18a3ee0) at ../jhbuild/glib/glib/gmain.c:3237 #12 0x00007f5d8469b7f7 in g_main_context_dispatch (context=0x18a3ee0) at ../jhbuild/glib/glib/gmain.c:3912 #13 0x00007f5d8469b9dc in g_main_context_iterate (context=0x18a3ee0, block=1, dispatch=1, self=0x1891750) at ../jhbuild/glib/glib/gmain.c:3985 #14 0x00007f5d8469baa0 in g_main_context_iteration (context=0x18a3ee0, may_block=1) at ../jhbuild/glib/glib/gmain.c:4046 #15 0x00007f5d84c93088 in g_application_run (application=0x19108e0, argc=1, argv=0x7ffc06869138) at ../jhbuild/glib/gio/gapplication.c:2378 #16 0x000000000044c4ff in main (argc=1, argv=0x7ffc06869138) at main.c:57
*** Bug 786547 has been marked as a duplicate of this bug. ***
Review of attachment 358166 [details] [review]: hmm, I don't get that warning and I still get the crash with this patch
Created attachment 358175 [details] [review] printers: Disconnect the search bar from the shell's key-press-event Using g_connect_object() ensures the disconnection happens when the search bar is finalized. -- This seems to fix it for me
Review of attachment 358175 [details] [review]: Better than my version that does nothing!
Review of attachment 358166 [details] [review]: This does nothing.
Attachment 358175 [details] pushed as 535c5d1 - printers: Disconnect the search bar from the shell's key-press-event